--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,17 +1,18 @@
 .aboutPage {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     font-family: "Ubuntu", sans-serif;
 }
-.pageName {
+.aboutPageName {
     display: flex;
     justify-content: center;
-    margin-left: 300px;
-    margin-right: 300px;;
+    width: 60%;
     border-bottom: 0.5px groove;
 }
-.pageName h1 {
+.aboutPageName h1 {
     margin: 50px;
 }
 .detailedInfo {
@@ -19,5 +20,8 @@
 }
   
 @media(max-width: 800px){
-
+    .aboutPageName h1 {
+        font-size: 15px;
+        margin: 30px;
+    }
 }
